prod test : modification des fixtures

--- a/templates/admin/client/index.html.twig
+++ b/templates/admin/client/index.html.twig
@@ -16,7 +16,7 @@
 {% block breadcrumb %}
     {{ utils.breadcrumb('Manage user',[
         {
-            path:'order_index',
+            path:path('order_index'),
             name:'Manage orders'
         }
     ])}}
