--- a/templates/admin/delivery_space/edit.html.twig
+++ b/templates/admin/delivery_space/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Edit DeliverySpace</h1>
 
-    {{ include('delivery_space/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('admin_delivery_space/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('delivery_space_index') }}">back to list</a>
+    <a href="{{ path('admin_delivery_space_index') }}">back to list</a>
 
-    {{ include('delivery_space/_delete_form.html.twig') }}
+    {{ include('admin_delivery_space/_delete_form.html.twig') }}
 {% endblock %}
