--- a/templates/admin/delivery_space/index.html.twig
+++ b/templates/admin/delivery_space/index.html.twig
@@ -1,33 +1,71 @@
-{% extends 'base.html.twig' %}
+{% import "macros/table.html.twig" as table %}
+{% import "macros/head.html.twig" as head %}
+{% import "macros/foot.html.twig" as foot %}
+{% import "macros/breadcrumb.html.twig" as utils %}
+{% import "macros/alertes.html.twig" as alerte %}
+{% import "macros/button.html.twig" as btn %}
+{% import "macros/link.html.twig" as link %}
 
-{% block title %}DeliverySpace index{% endblock %}
+{% extends 'admin/base.html.twig' %}
+
+{% block stylesheets %}
+{{ head.dataTable() }}
+{% endblock %}
+
+{% block breadcrumb %}
+{{ utils.breadcrumb('Manage delivery space'|trans) }}
+{% endblock %}
+
+{% block title %}{{'DeliverySpace'|trans}}{% endblock %}
 
 {% block body %}
-    <h1>DeliverySpace index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for delivery_space in delivery_spaces %}
-            <tr>
-                <td>{{ delivery_space.id }}</td>
-                <td>
-                    <a href="{{ path('delivery_space_show', {'id': delivery_space.id}) }}">show</a>
-                    <a href="{{ path('delivery_space_edit', {'id': delivery_space.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="2">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('delivery_space_new') }}">Create new</a>
+{% for item in app.flashes('success') %}
+{{ alerte.alert(item,'success')}}
+{% endfor %}
+<div class="card card-outline card-primary">
+    <div class="card-header">
+        <h3>{{'Delivery Space'|trans}}</h3>
+    </div>
+    <div class="card-body">
+        <a class="btn-primary btn my-3" href="{{ path('admin_delivery_space_new') }}">Create new</a>
+        <table id="table-1" class="table">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for delivery_space in delivery_spaces %}
+                <tr>
+                    <td>{{ delivery_space.id }}</td>
+                    <td>
+                        <a href="{{ path('admin_delivery_space_show', {'id': delivery_space.id}) }}">show</a>
+                        <a href="{{ path('admin_delivery_space_edit', {'id': delivery_space.id}) }}">edit</a>
+                    </td>
+                </tr>
+                {% else %}
+                <tr>
+                    <td colspan="2">no records found</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
+{% endblock %}
+{% block javascripts %}
+{{ table.jsDataTable('datatable_1') }}
+{# {{table.jsDataTable('datatable_2') }} #}
+<script>
+    $(document).ready(function () {
+        //nivagation 
+        $('#gestions').addClass(' menu-is-opening menu-open')
+        $('.gestions').addClass('active')
+        $('.gestion-customer').addClass('active')
+    })
+</script>
+{% endblock %}
+{% block foot %}
+{{ foot.dataTable()}}
 {% endblock %}
