--- a/templates/leSekoya/base.html.twig
+++ b/templates/leSekoya/base.html.twig
@@ -20,6 +20,11 @@
   <link rel="stylesheet" href="{{ asset('css/style.css') }}">
 </head>
 <body>
+<style>
+.btn.btn-search.w-100.btn-primary{
+  height:35px!important
+}
+</style>
 <div class="wrapper">
   <!--================ Start Header Menu Area =================-->
   <header class="header_area">
