--- a/templates/leSekoya/shop/index.html.twig
+++ b/templates/leSekoya/shop/index.html.twig
@@ -4,6 +4,18 @@
 {% block title %}Shop{% endblock %}
 
 {% block body %}
+<style>
+.breadcrumb-2{
+  background: transparent
+}
+.dropdown.desktop.active {
+  background-color:#01796F!important;
+  color:#fff!important
+}
+.dropdown.desktop.active > a {
+  color:#fff!important
+}
+</style>
 <nav class="breadcrumb">
   <a class="breadcrumb-item" href="/">{{'Home'|trans}}</a>
   <span class="breadcrumb-item active">{{'Shop'|trans}}</span>
@@ -19,21 +31,21 @@
             <ul>
               {% for item in category_parents %}
               <li class="mobile">
-                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ item.name }} ({{item.categorys|length}}) <span>&rsaquo;</span></a>
+                <a href="#" type="button" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ item.name }} ({{item.categorys|length}}) <span>&rsaquo;</span></a>
                 <ul class="dropdown-menu">
                 {% for item in item.categorys %}
                   <li class="nav-item">
                     {# <a  href="/admin/">Tableau de board</a> #}
-                    <a class="nav-link" href="?category={{ item.id }}">{{ item.title }} ({{item.articles|length}})</a>
+                    <a class="nav-link active" href="?category={{ item.id }}">{{ item.title }} ({{item.articles|length}})</a>
                   </li>
                   {% endfor %}
                 </ul>
               </li>
-              <li class="dropdown desktop">
+              <li class="dropdown desktop {{parent|default() == item.name ? 'active': '' }}">
                 <a href="#">{{ item.name }} ({{item.categorys|length}}) <span>&rsaquo;</span></a>
                 <ul>
                   {% for item in item.categorys %}
-                  <li><a href="?category={{ item.id }}">{{ item.title }} ({{item.articles|length}})</a></li>
+                  <li><a href="{{path('articles_category',{parent:item.parentCategory.name|lower,category:item.slug|lower}) }}">{{ item.title }} ({{item.articles|length}})</a></li>
                   {% endfor %}
                 </ul>
                 {# <input class="pixel-radio" {{ item.id==app.request.get('category') ? 'checked' :'' }} type="radio"
@@ -50,6 +62,13 @@
         <!-- Search bar -->
         {{ search.search(form) }}
 
+        <ol class="breadcrumb breadcrumb-2  p-1">
+          <li class="breadcrumb-item">Boutique<a href="{{path('articles')}}"></a></li>
+          {% if breadcrumb.parent %}
+          <li class="breadcrumb-item">{{ breadcrumb.parent}}<a href="#"></a></li>
+          <li class="breadcrumb-item active">{{breadcrumb.category}}</li>
+          {% endif %}
+        </ol>
         <!-- Start Best Seller -->
         <section class="lattest-product-area pb-40 category-list">
           <div class="row">
