--- a/templates/macros/search.html.twig
+++ b/templates/macros/search.html.twig
@@ -20,38 +20,10 @@
                     {{ form_row(form.mots)}}
                     </div>
                     <div class="col-md-4 col-12">
-                        <button class="btn w-100 btn-primary">{% trans %}Search{% endtrans %} <i class="fa fa-search-plus" aria-hidden="true"></i> </button>
+                        <button class="btn btn-search w-100 btn-primary">{% trans %}Search{% endtrans %} <i class="fa fa-search-plus" aria-hidden="true"></i> </button>
                     </div>
                 </div>
             </div>
-            {# <div class="col-lg-3">
-                    <a href="{{ path('cart_index') }}" class="btn">
-                        Cart 
-                        <i class="fa fa-cart-plus text-success fa-1x" aria-hidden="true"></i>
-                            <span class="badge badge-pill badge-primary">
-                                {{ app.request.session.get('panier') |length }} 
-                            </span>
-                    </a>
-                    {% if  is_granted('ROLE_CLIENT') %}
-                    <div class="dropdown open d-inline-block">
-                        <button class="btn dropdown-toggle" type="button" id="triggerId" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">
-                                   {% trans %}Hello{% endtrans %} {{ app.user.personne.firstName|default('Malick') }} <i class="fas fa-user-check    "></i>
-                                </button>
-                        <div class="dropdown-menu" aria-labelledby="triggerId">
-                            <a class="dropdown-item" href="{{ path('client_index') }}">{{ 'My account'|trans }} <i class="fa fa-user float-right ml-1" aria-hidden="true"></i> </a>
-                            <a class="dropdown-item" style="font-size:14px" href="#">{{ 'My orders'|trans }} <i class="ml-1 fas fa-box-open float-right"></i> </a>
-                            <a class="dropdown-item" href="{{ path('app_logout') }}">{{ 'Log out'|trans }} <i class="ml-1 fa fa-power-off text-danger float-right"></i> </a>
-
-                        </div>
-                    </div>
-                    {% endif %}
-            </div> #}
-            {# <div class="col-lg-4 mx-auto">
-                <div class="form-group">
-                    <button class="btn btn-primary">{% trans %}Search{% endtrans %} <i class="fa fa-search-plus" aria-hidden="true"></i> </button>
-                </div>
-            </div> #}
         </div>
         {{ form_end(form) }}
     </div>
