LeSekoya step : Home 40% - boutique 20% - panier 5% - gestion categorie niveau 3 70%

--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -16,7 +16,9 @@
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-  <!-- Font Awesome -->
+    <link rel="stylesheet" href="{{ asset('assets/vendor/line-awesome/line-awesome/line-awesome/css/line-awesome.min.css') }}">
+
+    <!-- Font Awesome -->
   <link rel="stylesheet" href="{{ asset('vendor/fontawesome-free/css/all.min.css') }}">
   <!-- select2 -->
   <link rel="stylesheet" href="{{ asset('vendor/select2/css/select2.min.css')}}">
